--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>TITLE HERE</title>
+  <title>Pig Dice Game</title>
 </head>
 <body>
   <header></header>
   <div class="container">
-    <h1>TITLE HERE</h1>
+    <h1>Pig Dice Game</h1>
+    <h2>Player 1</h2>
+    <h2>Player 2</h2>
+
+    <button type="button butn" ></button>
     
   </div>
   <footer></footer>
