finalized test 2 with console.log a random number on button click
Co-authored-by: Johnny Duverseau <duverseaujohnny21@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <header></header>
   <div class="container">
+    <div id="game">
     <h1>Pig Dice Game</h1>
     <h2>Player 1</h2>
     <h2>Player 2</h2>
-
-    <button type="button butn" ></button>
-    
+    <button type="button btn">Play game</button>
+  </div>
   </div>
   <footer></footer>
 </body>
