testing how to add looped total to player total without success
Co-authored-by: Johnny Duverseau <duverseaujohnny21@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <h1>Pig Dice Game</h1>
     <h2>Player 1</h2>
     <h2>Player 2</h2>
-    <button type="button btn">Play game</button>
+    <button id="roll" class="btn btn-primary" type="button btn">Play game</button>
+    <button id="hold" class="btn btn-success" type="button btn">Hold</button>
+  </div>
+  <div id="output">
+
   </div>
   </div>
   <footer></footer>
