--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <button id="hold" class="btn btn-success" type="button btn">Hold</button>
   </div>
   <div id="output">
-
+    <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
+    <h3>Your Roll: <span id="player1Roll"></span></h3>
   </div>
   </div>
   <footer></footer>
