add button click to add turn score to the overall score
Co-authored-by: Johnny Duverseau <duverseaujohnny21@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <button id="roll" class="btn btn-primary" type="button btn">Play game</button>
     <button id="hold" class="btn btn-success" type="button btn">Hold</button>
   </div>
-  <div id="output">
-    <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
+  <div id="output" class="overallScore"></div>
+  <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
     <h3>Your Roll: <span id="player1Roll"></span></h3>
-  </div>
   </div>
   <footer></footer>
 </body>
