--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="roll" class="btn btn-primary" type="button btn">Play game</button>
     <button id="hold" class="btn btn-success" type="button btn">Hold</button>
   </div>
-  <div id="output" class="overallScore"></div>
+  <div id="output" class="overallScore">Overall Score:</div>
   <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
     <h3>Your Roll: <span id="player1Roll"></span></h3>
   </div>
