added a play game button and roll dice button.
Co-authored-by: Jeff Dinsmore <hello@jeffdinsmore.com>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>Pig Dice Game</h1>
     <h2>Player 1</h2>
     <h2>Player 2</h2>
-    <button id="roll" class="btn btn-primary" type="button btn">Play game</button>
+    <button id="playGame" class="btn btn-info" type="button btn">Play game</button>
+    <button id="roll" class="btn btn-primary" type="button btn">Roll Dice</button>
     <button id="hold" class="btn btn-success" type="button btn">Hold</button>
   </div>
   <div id="output" class="overallScore">Overall Score:</div>
