testing overall score stopping game after reaching 100 without success
Co-authored-by: Jeff Dinsmore <hello@jeffdinsmore.com>

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <button id="playGame" class="btn btn-info" type="button btn">Play game</button>
     <button id="roll" class="btn btn-primary" type="button btn">Roll Dice</button>
     <button id="hold" class="btn btn-success" type="button btn">Hold</button>
-  </div>
-  <div id="output" class="overallScore">Overall Score:</div>
-  <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
+    </div>
+    <div id="output" class="overallScore">Overall Score:</div>
+    <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
     <h3>Your Roll: <span id="player1Roll"></span></h3>
+    <div id="winner"></div>
   </div>
   <footer></footer>
 </body>
