tested disable buttons after overall score reaches 100
Co-authored-by: Johnny Duverseau <duverseaujohnny21@gmail.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="output" class="overallScore">Overall Score:</div>
     <h3>Turn Score:<span id="player1TurnScore"></span></h3><br>
     <h3>Your Roll: <span id="player1Roll"></span></h3>
-    <div id="winner"></div>
+    <h1 id="winner"></h1>
   </div>
   <footer></footer>
 </body>
