--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
  <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Pig Dice Game</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <h1>Pig Dice Game</h1>
     <div class="row">
       <div class="col-md-6">
-        <img class="imgPig" src="img/cute-pig.jpg">
+        <img class="imgPig" src="src/img/cute-pig.jpg">
       </div>
       <div class="col-md-4">
         <button id="playGame" class="btn btn-info" type="button btn">Play game</button>
@@ -22,7 +23,7 @@
     </div>
     <div id="game">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" id="player1">
           <h2>Player 1</h2>
           <button id="roll1" class="btn btn-primary" type="button btn">Roll Dice</button>
           <button id="hold1" class="btn btn-success" type="button btn">Hold</button>
@@ -30,7 +31,7 @@
           <h3>Turn Score:<span id="player1TurnScore"></span></h3>
           <h3>Your Roll: <span id="player1Roll"></span></h3>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" id="player2">
           <h2>Player 2</h2>
           <button id="roll2" class="btn btn-primary" type="button btn">Roll Dice</button>
           <button id="hold2" class="btn btn-success" type="button btn">Hold</button>
