--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <h1>Pig Dice Game</h1>
     <div class="row">
       <div class="col-md-6">
-        <img class="imgPig" src="src/img/cute-pig.jpg">
+        <img class="imgPig" src=".src/img/cute-pig.jpg">
       </div>
       <div class="col-md-4">
         <button id="playGame" class="btn btn-info" type="button btn">Play game</button>
